alejandro pa ti con to mi amor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
@@ -43,7 +42,8 @@
         <activity android:name=".MainChatActivity" />
         <activity android:name=".SingleChatActivity" />
         <activity android:name=".RegistrationActivity" />
-        <activity android:name=".RegistrationActivity2"></activity>
+        <activity android:name=".RegistrationActivity2" android:exported="true">
+        </activity>
     </application>
 
 </manifest>
