--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         debug {
             keyAlias 'test'
             keyPassword 'tagMatch'
-            storeFile file('D:/workspace/TagMatchAndroid/TagMatch/mystore.keystore')
+            storeFile file('C:/Users/sergi/Desktop/WorkSpace/TagMatch/mystore.keystore')
             storePassword 'tagMatch'
         }
     }
@@ -32,9 +32,12 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
+    compile 'com.android.support:design:24.0.0-alpha1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.google.android.gms:play-services:8.3.+'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-identity:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
 }
