--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         debug {
             keyAlias 'test'
             keyPassword 'tagMatch'
-            storeFile file('C:/Users/sergi/Desktop/WorkSpace/TagMatch/mystore.keystore')
+            storeFile file('D:/workspace/TagMatch/TagMatch/mystore.keystore')
             storePassword 'tagMatch'
         }
     }
