--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         </activity>
         <activity android:name=".MainChatActivity" />
         <activity android:name=".SingleChatActivity" />
-        <activity android:name=".RegistrationActivity" />
+        <activity android:name=".RegistrationActivity" android:exported="true"/>
         <activity android:name=".RegistrationActivity2" android:exported="true">
         </activity>
     </application>
