--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,11 +56,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainChatActivity" />
-        <activity android:name=".SingleChatActivity" />
-        <activity android:name=".RegistrationActivity" android:exported="true"/>
-        <activity android:name=".RegistrationActivity2" android:exported="true">
-        </activity>
+        <activity android:name=".RegistrationActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".RegistrationActivity2"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
