--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.firebase:firebase-client-android:2.5.1+'
-    compile files('TagMatch/libs/firebase-client-android-2.5.1.jar')
+    compile 'com.android.support:support-v4:23.2.1'
 }
