--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Login"
+            android:name=".Login_Register.Login"
             android:label="Login"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -49,11 +49,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegistrationActivity"
+            android:name=".Login_Register.RegistrationActivity"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".RegistrationActivity2"
+            android:name=".Login_Register.RegistrationActivity2"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
