Vuelta para atras correcta + Ahora hablamos con heroku

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,11 +36,11 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="SUCIA"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Login_Register.Login"
-            android:label="Login"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
