--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.5.1+'
     compile 'com.android.support:support-v4:24.0.0-alpha1'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
