my Adverts interface done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,11 @@
         <activity
             android:name=".Advertisement.ViewAdvert"
             android:label="@string/title_activity_view_advert"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".Users.MyAdverts"
+            android:label="@string/title_activity_my_adverts"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
