si la ubicacio de l'aleix funciona, aquesta tm

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
     }
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "3g"
+    }
 }
 
 dependencies {
