--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,6 +114,10 @@
         <activity
             android:name=".Users.PasswordRecover"
             android:label="@string/title_activity_password_recover"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Users.RecoverSecondStep"
+            android:label="@string/title_activity_recover_second_step"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
