--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,6 +130,9 @@
             android:name=".Users.RecoverSecondStep"
             android:label="@string/title_activity_recover_second_step"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="76047eec93cd1095a8abf70c10689498c39942d5" />
     </application>
 
 </manifest>
